Instance variable => property

--- a/src/data/levels/002_Cartridge/001_The magic constant/chat/en.yml
+++ b/src/data/levels/002_Cartridge/001_The magic constant/chat/en.yml
@@ -21,7 +21,7 @@ neeesfiles:
 
 exercise:
   messages:
-  - add a constructor to the `Cartridge` class receiving the ROM bytes, and save them in an instance variable called `bytes`
+  - add a constructor to the `Cartridge` class receiving the ROM bytes, and save them in a property called `bytes`
   - if the magic constant doesn't match $4E $45 $53 $1A, throw an error with the "Invalid ROM." message
   responses:
   - I need help 🥺 [help]
