--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
