Finishing New CPU level

--- a/src/data/levels/003_CPU/000_New CPU/chat/en.yml
+++ b/src/data/levels/003_CPU/000_New CPU/chat/en.yml
@@ -1,5 +1,8 @@
 ---
 main:
   messages:
-  - coming soon!
+  - create a file somewhere for the CPU code
+  - its default export should be an empty class
+  - then, import that file from ~/code/index.js~
+  - and add a "CPU" key (pointing to that class) to the exported object
   responses: []
