--- a/src/data/levels/003_CPU/000_New CPU/chat/es.yml
+++ b/src/data/levels/003_CPU/000_New CPU/chat/es.yml
@@ -1,5 +1,8 @@
 ---
 main:
   messages:
-  - coming soon!
+  - crea un archivo en algún lugar para el código de la CPU
+  - su valor a exportar debería ser una clase vacía
+  - luego, importa ese archivo desde ~/code/index.js~
+  - y agrega una clave "CPU" (apuntando a esa clase) al objeto exportado
   responses: []
