Adding registers level

--- a/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
+++ b/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
@@ -18,12 +18,12 @@ exercise:
   - you can inspect them with the ~open~ command
   - I want you to read it and tell me if you understand it
   responses:
-  - I think I do [understand]
-  - what's a mapper? 🧠 [mapper]
-  - what's mirroring? 🚽 [mirroring]
-  - please define <PRG-ROM>, <CHR-ROM>, <PRG-RAM> and <CHR-RAM> 🐏 [memories]
-  - padding? 🧸 [padding]
-  - what the hell is a "nybble"? 🦴 [nybble]
+  - 🤔  I think I understand [understand]
+  - (*) what's a mapper? 🧠 [mapper]
+  - (*) what's mirroring? 🚽 [mirroring]
+  - (*) please define <PRG-ROM>, <CHR-ROM>, <PRG-RAM> and <CHR-RAM> 🐏 [memories]
+  - (*) padding? 🧸 [padding]
+  - (*) what the hell is a "nybble"? 🦴 [nybble]
 
 mapper:
   messages:
