--- a/src/data/levels/002_Cartridge/001_The magic constant/chat/en.yml
+++ b/src/data/levels/002_Cartridge/001_The magic constant/chat/en.yml
@@ -30,5 +30,5 @@ help:
   messages:
   - you'll receive a `Uint8Array`, which works similar to regular arrays!
   - remember that you can express hexadecimal notation with the ~0x~ prefix, i.e. ~0x4e~
-  - "to throw errors, use:\n  ```javascript throw new Error(\"a message\")```"
+  - "to throw errors, use:\n  ```javascript throw new Error(\"a message\");```"
   responses: []
