--- a/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
+++ b/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
@@ -95,10 +95,10 @@ import:
   messages:
   - |-
     do it like this:
-      ```javascript import byte from "/lib/byte"```
+      ```javascript import byte from "/lib/byte";```
   - |-
     also, if you add it to your exported `index.js` object...
-      ```javascript import Cartridge from "./Cartridge"
+      ```javascript import Cartridge from "./Cartridge";
       import byte from "/lib/byte";
 
       export default { Cartridge, byte }```
