--- a/src/data/levels/003_CPU/002_Flags/chat/en.yml
+++ b/src/data/levels/003_CPU/002_Flags/chat/en.yml
@@ -44,5 +44,5 @@ bits:
 
 nowwhat:
   messages:
-  - "great, just add a new instance to the `CPU` class, like this:\n```javascript this.flags = new FlagsRegister();```"
+  - "great, just add a new instance to the `CPU` class, below the other registers, like this:\n```javascript this.flags = new FlagsRegister();```"
   responses: []
