--- a/src/data/levels/003_CPU/002_Flags/chat/es.yml
+++ b/src/data/levels/003_CPU/002_Flags/chat/es.yml
@@ -44,5 +44,5 @@ bits:
 
 nowwhat:
   messages:
-  - "perfecto, solo agrega una nueva instancia a la clase `CPU`, así:\n```javascript this.flags = new FlagsRegister();```"
+  - "perfecto, solo agrega una nueva instancia a la clase `CPU`, debajo de los otros registros, así:\n```javascript this.flags = new FlagsRegister();```"
   responses: []
