--- a/src/data/levels/003_CPU/001_Registers/chat/es.yml
+++ b/src/data/levels/003_CPU/001_Registers/chat/es.yml
@@ -4,8 +4,10 @@ main:
   - "vas a empezar creando dos clases: `Register8Bit` y `Register16Bit` 🔢"
   - |-
     tendrían que tener dos métodos:
-    ```javascript getValue()```: retorna el contenido del registro
-    ```javascript setValue(value)```: asigna el contenido del registro
+    **getValue()**:
+      __retorna el contenido del registro__
+    **setValue(value)**:
+      __asigna el contenido del registro__
   - el contenido del registro comienza en 0 y puede ser un número de 8 bits (0-255) o uno de 16 bits (0-65535), dependiendo de la clase
   responses:
   - (*) ¿y si trato de escribir fuera de los límites? 🚫 [limit]
