--- a/src/data/levels/003_CPU/004_Stack/chat/en.yml
+++ b/src/data/levels/003_CPU/004_Stack/chat/en.yml
@@ -6,11 +6,12 @@ main:
   - it should receive the `memory` and `sp` from the CPU, as it will have to interact with them
   - |-
     implement these methods:
-    ~push(value)~:
-      writes ~value~ to <current address>, then decrements <sp>
-    ~pop()~:
-      increments <sp>
-      returns the content of <current address>
-  - the <current address> always equals $0100 (where the stack lives in RAM), plus [SP]
-    
+    **push(byte)**:
+      __writes <byte> to <currentAddress>, then decrements <sp>__
+    **pop()**:
+      __increments <sp> and returns the content of <currentAddress>__
+  - the <currentAddress> always equals $0100 (where the stack lives in RAM), plus the value in [SP]
+  - |-
+    when you finish, add a new stack instance to the CPU:
+    ```javascript this.stack = new Stack(this.memory, this.sp);```
   responses: []
