Adding Insert cartridge level

--- a/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/es.yml
@@ -36,7 +36,7 @@ machinecode:
   - correcto
   - de hecho, estás viendo el código compilado ahora mismo
   - fíjate en el Visor de Memoria en la parte inferior derecha de la pantalla
-  - el código empieza desde la dirección de memoria $4020
+  - en esta simulación, el código empieza en la dirección de memoria $4020
   - si posas el cursor de tu mouse sobre una de estas direcciones, mostrará dónde empieza cada instrucción
   responses:
   - (*) ¿qué es una dirección de memoria? [address]
