--- a/src/data/levels/003_CPU/004_Insert cartridge/chat/en.yml
+++ b/src/data/levels/003_CPU/004_Insert cartridge/chat/en.yml
@@ -1,5 +1,17 @@
 ---
 main:
   messages:
-  - coming soon!
+  - we need to glue our 💾  `Cartridge` and our 🖥️  `CPU`
+  - and connect <PRG-ROM> to the memory map
+  responses:
+  - how? [how]
+
+how:
+  messages:
+  - create a `NEEES` class that receives the ROM bytes
+  - it should instantiate a new `Cartridge` using those bytes, and assign it to a `cartridge` property
+  - it should also instantiate the `CPU`, passing the cartridge as an argument, and save it into a `cpu` property
+  - the `CPU` should pass the cartridge to `CPUMemory`'s constructor
+  - in `CPUMemory`, map the range $8000-$BFFF to <PRG-ROM> (remember you can obtain the bytes by calling ```javascript cartridge.prg()```)
+  - don't call ```javascript prg()``` multiple times, as it would affect performance
   responses: []
