--- a/src/data/levels/003_CPU/004_Insert cartridge/chat/es.yml
+++ b/src/data/levels/003_CPU/004_Insert cartridge/chat/es.yml
@@ -1,5 +1,17 @@
 ---
 main:
   messages:
-  - coming soon!
+  - tenemos que unir nuestro 💾  `Cartridge` y nuestra 🖥️  `CPU`
+  - y conectar <PRG-ROM> al mapa de memoria
+  responses:
+  - ¿cómo? [how]
+
+how:
+  messages:
+  - crea una clase `NEEES` que reciba los bytes de la ROM
+  - tendría que instanciar un nuevo `Cartridge` usando esos bytes, y asignarlo a una propiedad `cartridge`
+  - también tendría que instanciar la `CPU`, pasando el cartucho como argumento, y guardarla en una propiedad `cpu`
+  - la `CPU` debería pasarle el cartucho al constructor de `CPUMemory`
+  - en `CPUMemory`, mapea el rango $8000-$BFFF a <PRG-ROM> (recuerda que puedes obtener los bytes llamando a ```javascript cartridge.prg()```)
+  - no invoques a ```javascript prg()``` múltiples veces, ya que afectaría el rendimiento
   responses: []
