Adding Execute (1/2) level

--- a/src/data/levels/003_CPU/003_Memory/chat/en.yml
+++ b/src/data/levels/003_CPU/003_Memory/chat/en.yml
@@ -51,6 +51,7 @@ implement:
 
 help:
   messages:
+  - to know which address you should read
   - you have to substract the range start
   - then, use the ~%~ (remainder) operator with the mirror size
   - |-
