--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "sinon": "^15.0.1",
+    "sinon-chai": "^3.7.0",
     "updated-xterm-for-react": "5.0.0",
     "xterm": "5.0.0",
     "xterm-addon-fit": "^0.5.0",
