--- a/src/data/levels/003_CPU/003_Memory/chat/en.yml
+++ b/src/data/levels/003_CPU/003_Memory/chat/en.yml
@@ -53,7 +53,7 @@ help:
   messages:
   - to know which address you should read
   - you have to substract the range start
-  - then, use the ~%~ (remainder) operator with the mirror size
+  - then, use the ~%~ (remainder) operator with the size of the chunk we want to mirror
   - |-
     for example, to calculate the 4th range's mirror, we would do:
     ```javascript (address - 0x2008) % 0x0008```
