--- a/src/data/levels/003_CPU/007_Stack/chat/es.yml
+++ b/src/data/levels/003_CPU/007_Stack/chat/es.yml
@@ -6,8 +6,8 @@ main:
   - tendría que recibir `memory` y `sp` de la CPU, ya que va a tener que interactuar con ellos
   - |-
     implementa estos métodos:
-    **push(byte)**:
-      __escribe <byte> en <direcciónActual>, luego decrementa <sp>__
+    **push(value)**:
+      __escribe <value> en <direcciónActual>, luego decrementa <sp>__
     **pop()**:
       __incrementa <sp> y retorna el contenido de <direcciónActual>__
   - la <direcciónActual> siempre es $0100 (donde vive la pila en la RAM), más el valor en [SP]
