--- a/src/data/levels/003_CPU/003_Memory/chat/en.yml
+++ b/src/data/levels/003_CPU/003_Memory/chat/en.yml
@@ -42,7 +42,7 @@ implement:
         (e.g. $0802 becomes $0002, $1023 becomes $0023)
       otherwise, returns 0__
     **write(address, byte)**:
-      __similar to read(...), but writes the <byte> instead of returning__
+      __similar to *read*, but writes the <byte> instead of returning__
   - |-
     then, add to your `CPU` constructor:
     ```javascript this.memory = new CPUMemory();```
