--- a/src/data/levels/003_CPU/010_Instructions (1-6) - Arithmetic/chat/es.yml
+++ b/src/data/levels/003_CPU/010_Instructions (1-6) - Arithmetic/chat/es.yml
@@ -18,5 +18,8 @@ howmany:
   - y algunas de ellas son muy similares
   - crea un objeto siguiendo el mismo formato que el ejemplo
   - y expórtalo bajo la clave `instructions` en ~/code/index.js~
-  - necesitas documentación acerca de qué debería hacer cada instrucción, así que revisa 📄  ~/docs/cpu_instructions.md~
+  - necesitas documentación acerca de qué debería hacer cada instrucción
+  - así que revisa 📄  ~/docs/cpu_instructions.es.md~
+  run-after-messages: |
+    store.dispatch.savedata.openFile("/docs/cpu_instructions.es.md");
   responses: []
